Fix z-index problem (maps cover navigation)
Resolves #36

--- a/docs/stylesheets/maps.css
+++ b/docs/stylesheets/maps.css
@@ -1,4 +1,5 @@
-.leaflet-map {
+.peshachko-map {
 	height: 500px;
 	width: 100%;
+	z-index: 0;
 }
